src/objects/Campaign_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Completion_Pause_Task__c</fullName>
        <inlineHelpText>Submit a Pause task request and update &apos;Estimated Launch Date&apos; on Maintenance Campaign Profile to match the contract End of Service Date of the Related OLI</inlineHelpText>
        <label>Contract Completion Pause Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Strategy_Update_Details__c</fullName>
        <description>This field is used in the work relay forms.</description>
        <label>Strategy Update Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
	<fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Campaign_Inquiry_Request_Details__c</fullName>
        <label>Campaign Inquiry Request Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
	<fields>
        <fullName>Design_Instructions__c</fullName>
        <description>This is used to enter the design instructions for the campaign profile.</description>
        <label>Design Instructions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Page_URL__c</fullName>
        <label>Facebook Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Email__c</fullName>
        <label>Lead Capture Email</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Social_Voice__c</fullName>
        <label>Social Voice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Based</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Fun</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Helpful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Gender__c</fullName>
        <label>Targeted Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>History</fullName>
        <active>true</active>
        <description>History records</description>
        <label>History</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPC</fullName>
        <active>true</active>
        <description>PPCrecord type for Campaign Profile</description>
        <label>PPC</label>
    </recordTypes>
	<recordTypes>
        <fullName>Social_Ads</fullName>
        <active>true</active>
        <description>Social Ads record type for Campaign Profile</description>
        <label>Social Ads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Media_Management</fullName>
        <active>true</active>
        <description>Social Media Management record type for Campaign Profile</description>
        <label>Social Media Management</label>
    </recordTypes>
</CustomObject>